--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="nonetwork">沒有連上網路</string>
     <string name="timeout_exception">連接逾時</string>
     <string name="exception">資料取得錯誤</string>
+    <string name="networkIssue_nothavenet">網路連線出現錯誤</string>
 
 </resources>
